src/k8s/todoapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: todoapi-deployment
  name: todoapi-deployment
  namespace: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapi-app
  template:
    metadata:
      labels:
        app: todoapi-app
    spec:
      containers:
        - name: todoapi
          image: todoapi:0.0.1
          ports:
            - containerPort: 8080        
      restartPolicy: Always
