src/k8s/todoapi-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todoapi
  name: todoapi-postgres-service
  namespace: todo
spec:
  selector:
    app: todoapi-postgres
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
