src/k8s/todoapi-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todoapi
  name: todoapi-redis-service
  namespace: todo
spec:
  selector:
    app: todoapi-redis
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
