src/k8s/todoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todoapi
  name: todoapi
  namespace: todo
spec:
  selector:
    app: todoapi
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
