src/k8s/todoapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapi-ingress
  namespace: todo
  labels:
    name: todoapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /swagger/index.html
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: todo.poc.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: todoapi-service
            port:
              number: 8080
